--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -21,7 +21,8 @@ threads_SRC += threads/intr-stubs.S	# Interrupt stubs.
 threads_SRC += threads/synch.c		# Synchronization.
 threads_SRC += threads/palloc.c		# Page allocator.
 threads_SRC += threads/malloc.c		# Subpage allocator.
-threads_SRC += threads/sleep_desc.c # Sleep descriptor for threads.
+threads_SRC += threads/sleep_desc.c     # Sleep descriptor for threads.
+threads_SRC += threads/fixed-point.c    # fixed point type
 
 # Device driver code.
 devices_SRC  = devices/pit.c		# Programmable interrupt timer chip.
