--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -63,7 +63,11 @@ userprog_SRC += userprog/gdt.c		# GDT initialization.
 userprog_SRC += userprog/tss.c		# TSS management.
 
 # No virtual memory code yet.
-#vm_SRC = vm/file.c			# Some file.
+vm_SRC  = vm/vm.c                   # Virtual memory.
+vm_SRC += vm/frame.c                # Frame table.
+vm_SRC += vm/sp_table.c             # Supplementary page table.
+vm_SRC += vm/swap.c                 # Swap table.
+
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
